# discord-mcp

./: .gitignore  GUARDIAN-BRIEF.md  README.md  pyproject.toml  railway.toml
.claude/: mcp.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: guardian-commands-not-visible.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-verification-gate/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-account-restrictions/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-raid-detection/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-link-scanning/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: operations.json  server.py
src/guardian/: __init__.py  account_restrictions.py  blocklist_matcher.py  config.py  config_manager.py  guardian.py  infrastructure.py  link_resolver.py  logging_utils.py  offense_tracking.py  raid_detection.py  raid_lockdown.py  slash_commands.py  verification.py  verification_timeout.py
