[project]
name = "discord-mcp"
version = "0.1.0"
description = "MCP server for full Discord server administration via Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["mcp", "discord", "claude", "ai", "bot", "server", "administration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "discord.py>=2.6.4",
    "tldextract>=5.1.2",
]

[project.urls]
Homepage = "https://github.com/glittercowboy/discord-mcp"
Repository = "https://github.com/glittercowboy/discord-mcp"
Issues = "https://github.com/glittercowboy/discord-mcp/issues"
