[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-mcp"
version = "0.1.0"
description = "MCP server for full Discord server administration via Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["mcp", "discord", "claude", "ai", "bot", "server", "administration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
discord-mcp = "src.server:mcp.run"

[project.urls]
Homepage = "https://github.com/glittercowboy/discord-mcp"
Repository = "https://github.com/glittercowboy/discord-mcp"
Issues = "https://github.com/glittercowboy/discord-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
